button visibility fixed

--- a/public/main.css
+++ b/public/main.css
@@ -71,6 +71,9 @@ li {
   padding: 5px;
 }
 
+button {
+  visibility: hidden;
+}
 
 #beer-list {
   font-family: 'Archivo Black', sans-serif;
